--- a/src/deptool.in
+++ b/src/deptool.in
@@ -295,7 +295,13 @@ help> I<command>
 =item init [I<--server=hostname>] [I<branch-prefix>]
 
 Initialize the system, this will create the appropriate version
-control files, and will pull the initial database(s). 
+control files, and will pull the initial database(s).
+
+=item tarinit [I</path/to/tar.bz2>...] [I<http://host/path/to/tar>] 
+      [I<http://host/path/to/latest-release]
+
+Initialize the system.  This will optionally download and unpack the
+specified source packages.
 
 =item checkout I<branch-substring>
 
@@ -455,9 +461,9 @@ sub helpSection {
 	    use Pod::Text::Termcap;
 
 	    my $out = IO::String->new;
-	    
+
 	    podselect({-sections => [$section], -output => $out }, $0);
-	    
+
 	    my $to_text = new Pod::Text::Termcap;
 	    $out->setpos(0);
 	    $to_text->parse_from_filehandle($out);
@@ -467,7 +473,7 @@ sub helpSection {
 	# -sections => ... works on Etch but not RHEL4
 	$fn = eval q!
 	    my $parser = new Pod::Usage(USAGE_OPTIONS => {-verbose => 99});
-	    
+
 	    $parser->select($section);
 	    $parser->parse_from_file($0);
         !;
@@ -488,7 +494,7 @@ sub help {
     } elsif ($what eq 'commands') {
 	helpSection("COMMANDS");
     } elsif (defined $commands{$what}) {
-	helpSection("COMMAND DETAILS/^$what( .*)?\$");
+	helpSection("COMMAND DETAILS/^$what(\\s.*)?\$");
     } else {
 	usage("Unknown option to help '$what'");
     }
@@ -657,6 +663,41 @@ sub initDbs {
     }
 }
 
+=pod
+
+=head2 tarinit [I</path/file.tar.bz2>...] [I<http://...>] [I<http://.../latest-release>]
+
+The tarinit command will initialize the software packages based on tar files.
+It has three possible types of arguments.  If no arguments are specified, then
+it defaults to http://tesla.hpl.hp.com/opensource/latest-release; which will
+download the open-source packages available on tesla and unpack then.
+
+=over 4
+
+=item I</path/to/file.tar.bz2>
+
+This specifies that deptool should unpack the specified tar file into the
+projects directory.  The tar file will normally unpack into a directory names
+I<package>-I<date>, in which case the -I<date> portion will be removed.  If
+there is already a I<package> available in the projects directory, it will only
+be replaced if it has a different release date than the file.tar.bz2 one.
+
+=item I<http://host/path/to/tar>
+
+This specifies that deptool should first download the tar file into the
+projects directory and then unpack it as if the downloaded file had been
+specified to tarinit.  Deptool will use wget to download the file.  If the tar
+file has already been downloaded, it will just be used.
+
+=item I<http://host/path/to/latest-release>
+
+This specifies that deptool should download the specified text file, and should
+then download all of the packages specified in the latest-release file.
+
+=back
+
+=cut
+
 sub depTarInit {
     my (@files) = @ARGV;
 
@@ -772,9 +813,11 @@ sub httpFetchUnpackTar {
 
     if (! -e "$project-$date.tar.bz2") {
 	userPrompt("wget $url");
-	my $ret = system("wget $url");
+	my $ret = system("wget $url -O $project-$date.tar.bz2.tmp");
 
-	die "wget $url failed" unless $ret == 0 && -r "$project-$date.tar.bz2";
+	die "wget $url failed" unless $ret == 0 && -r "$project-$date.tar.bz2.tmp";
+	rename("$project-$date.tar.bz2.tmp", "$project-$date.tar.bz2")
+	    or die "Unable to rename $project-$date.tar.bz2.tmp to $project-$date.tar.bz2: $!";
     }
     unpackProjectsTar(projects() . "/$project-$date.tar.bz2");
 }
@@ -1893,14 +1936,15 @@ depcommit: will show differences after successful build\n";
 
 =head2 cmake
 
-This command has to be run in either the build or debug directory.  In
-the build directory, it will set the install prefix to $BUILD_OPT and
-the cmake build type to RelWithDebInfo.  In the debug directory, it
-will set the install prefix to $BUILD_DEBUG and the cmake build type
-to Debug.  If you are in a sub-type build directory (see cdopt), then
-the deptool cmake command will automatically add
--DBUILD_SUBDIR=I<sub-type> to the cmake instantiation so that the
-configuration can take into effect the sub-type.
+This command has to be run in either the build or debug directory.  In the
+build directory, it will set the install prefix to $BUILD_OPT and the cmake
+build type to RelWithDebInfo.  In the debug directory, it will set the install
+prefix to $BUILD_DEBUG and the cmake build type to Debug.  If you are in a
+sub-type build directory (see cdopt), then the deptool cmake command will
+automatically add -DBUILD_SUBDIR=I<sub-type> to the cmake instantiation so that
+the configuration can take into effect the sub-type.  You can set the
+environment variable DEPTOOL_CMAKE_FLAGS if there are additional flags that
+need to be passed to cmake.
 
 =cut
 
@@ -1930,7 +1974,7 @@ sub runCMakeClean {
         unless $cwd =~ m!^(($projects)|($debug)|($opt))/!o;
     print "Cleaning cmake files out of $cwd\n"
         unless $quiet;
-    my @files; 
+    my @files;
     my @dirs;
     find(sub { push(@files, $File::Find::name) if /^CMakeCache.txt$/o
                    || /^Makefile$/o;
@@ -1968,7 +2012,11 @@ sub runCMakeConfig {
     if (defined $build_subdir) {
         push(@cmakecmd, "-D", "BUILD_SUBDIR=$build_subdir");
     }
-    push(@cmakecmd, @extra_args, $src);
+    push(@cmakecmd, @extra_args);
+    if (defined $ENV{DEPTOOL_CMAKE_FLAGS}) {
+	push(@cmakecmd, split(/\s+/o, $ENV{DEPTOOL_CMAKE_FLAGS}));
+    }
+    push(@cmakecmd, $src);
     runCommand(@cmakecmd);
 }
 
