Added and corrected citations for DSN'10 draft.

--- a/doc/references/CMakeLists.txt
+++ b/doc/references/CMakeLists.txt
@@ -15,20 +15,23 @@ SET(BIB_FILES
     cacm.bib
     csur.bib
     datamation.bib
-    dcs.bib
     disc.bib
     distributedcomputing.bib
+    dsn.bib
     fast.bib
     hotdep.bib
     hotos.bib
+    icdcs.bib
     icpp.bib
     ics.bib
     ieee-computer.bib
+    ieeejsac.bib
     ieeetoc.bib
     ieeetpds.bib
     isca.bib
     journal-high-perf-compute-apps.bib
     mascots.bib
+    middleware.bib
     nsdi.bib
     osdi.bib
     os-review.bib
@@ -44,6 +47,7 @@ SET(BIB_FILES
     vldb.bib
     web-sites.bib
     wmcsa.bib
+    wmrd.bib
 )
 
 ADD_CUSTOM_TARGET(all-bib ALL 
