More bib entries. Fixed patterson RAID tag from 1998 to 1988.

--- a/doc/references/CMakeLists.txt
+++ b/doc/references/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(BIB_FILES
     ieeetoc.bib
     ieeetpds.bib
     isca.bib
+		jacm.bib
     journal-high-perf-compute-apps.bib
     mascots.bib
     middleware.bib
