--- a/src/lintel-disktool.in
+++ b/src/lintel-disktool.in
@@ -28,7 +28,29 @@ unless ($EUID == 0) {
     die "exec failed: $!";
 }
 
-my $success = GetOptions("debug!" => \$Global::debug);
+=pod
+
+=head2 Options
+
+=over
+
+=item debug
+
+Show what is being done in detail
+
+=item config <configfile>
+
+Load the specified configuration file instead of the default in:
+/etc/lintel-disktool.config
+
+=back
+
+=cut
+
+my $success = GetOptions(
+		"debug!" => \$Global::debug,
+		"config=s" => \$config_path);
+
 usage() unless $success;
 
 $|=1;
@@ -107,11 +129,19 @@ sub oldConfigRead {
 }
 
 =pod
+
+=head2 Configuration File Format
+
     debug: turn on debugging messages.
+
     drivepatterns: which patterns to look for in /dev for drives.
+
     mount_path: where to mount the drive.
+
     fs: which file system to format them with.
+
     sysfs_ids, serials: fsids or serial numbers of drives in play.
+
     mount
 	{
 	    debug => 0|1,
